--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 	  <section>
 		  <div class="left">
 			  
-			  <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="facebook-icon"/>
+			  <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook logo"/>
 
 			  <p>
 				  Facebook helps you connect and share with the people in your life.
